--- a/Code/code.ipynb
+++ b/Code/code.ipynb
@@ -39,8 +39,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from jupyter_innotater import Innotater\n",
-    "from jupyter_innotater.data import ImageInnotation, BoundingBoxInnotation, MultiClassInnotation, BinaryClassInnotation\n",
+    "from jupyter_innotater import *\n",
     "\n",
     "detection_path = './detection'\n",
     "\n",
@@ -107,7 +106,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df[['x1','y1','x2','y2']] = bboxes\n",
+    "df['name'] = [cats[i] for i in classes]\n",
+    "\n",
+    "# And save the full Pandas data back to a CSV file\n",
+    "df.to_csv(NEW_FOOD_ANNOTATION, index=False)"
+   ]
   }
  ]
 }
